# AI_Implements_AI

./: .gitignore  Auto_merging_retrival.ipynb  Deeplearning_ADV_RAG.ipynb  Langchin_templets_resources.ipynb  README.md  Rag_Triad_of_Metrics.ipynb  default.sqlite  eval_questions.txt  rag-chatbot_v1.py  rag_on_langchain.ipynb  rag_on_python_notebook.ipynb  rag_v2.ipynb  readmefiles_script.py  sentence_window_retrieval.ipynb  utils.py
.ipynb_checkpoints/: Rag_Triad_of_Metrics-checkpoint.ipynb
rag-poetry/: Justfile  README.md  main.py  pyproject.toml  results  results.md
